--- a/examples/timer.html
+++ b/examples/timer.html
@@ -147,6 +147,7 @@
                 position: absolute;
                 left: 0;
                 top: 0;
+                text-align: center;
             }
             .title {
                 font-family: Roboto;
@@ -163,12 +164,14 @@
                 font-weight: 300;
                 line-height: 100%;
                 width: 100%;
-                text-align: center;
             }
             .clock {
-                padding: 25px 75px;
+                padding: 30px 40px;
                 background: hsla(0, 0%, 5%, 0.9);
                 position: relative;
+            }
+            input {
+                max-width: 145px;
             }
         </style>
         <div class="clock">
